--- a/code/manifest.json
+++ b/code/manifest.json
@@ -1,26 +1,29 @@
 {
-  "version": "1.2",
-  "name": "TabInfoCopy",
-  "description": "Copy Tab Titles and URLs to Clipboard",
-  "manifest_version": 2,
-  "background": {
-    "page": "bg.html" 
-  },
- "icons": { 
-    "16": "i/icon16.png",
-		"48": "i/icon48.png",
-		"128": "i/icon128.png" 
-  },
-  "page_action": {  
-    "default_icon": {                  
-      "19": "i/icon19.png",           
-      "38": "i/icon38.png"            
+    "version": "1.2",
+    "name": "TabInfoCopy",
+    "description": "Copy Tab Titles and URLs to Clipboard",
+    "manifest_version": 2,
+    "background": {
+        "page": "background.html"
     },
-    "default_title": "single click: copy selected tab\ndouble click: copy tabs in window\ntriple click: copy tabs in session"
-  },  
-  "content_security_policy": "script-src 'self'; object-src 'self'",
-  "permissions": [
-    "clipboardWrite",
-    "tabs"
-  ]
+    "icons": {
+        "16": "icons/icon16.png",
+	"48": "icons/icon48.png",
+	"128": "icons/icon128.png"
+    },
+    "options_page": "options.html",
+    "page_action": {
+        "default_icon": {
+            "19": "icons/icon19.png",
+            "38": "icons/icon38.png"
+        },
+        "default_title": "single click: copy selected tab\ndouble click: copy tabs in window\ntriple click: copy tabs in session"
+    },  
+    "content_security_policy": "script-src 'self'; object-src 'self'",
+    "permissions": [
+        "clipboardWrite",
+        "tabs",
+        "storage"
+    ]
 }
+
