--- a/code/manifest.json
+++ b/code/manifest.json
@@ -1,6 +1,6 @@
 {
-  "version": "1.2",
-  "name": "TabInfoCopy",
+  "version": "1.3",
+  "name": "TabCopy",
   "description": "Copy Tab Titles and URLs to Clipboard",
   "manifest_version": 2,
   "background": {
