--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
-dev.sublime-project
-dev.sublime-workspace
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+/package
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.history
+*.log
+notes.md
+notes.txt
+
+# secrets
+secrets.*.js
