--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fmt": "prettier --write '**/*.{ts,tsx,json,css,scss,html}'"
   },
   "dependencies": {
+    "framer-motion": "^10.16.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
