--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^20.10.3",
     "framer-motion": "^10.16.12",
     "lodash.isobject": "^3.0.2",
+    "nanoid": "^5.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
