--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
   },
   "dependencies": {
     "@types/lodash.isobject": "^3.0.9",
+    "@types/lodash.throttle": "^4.1.9",
     "@types/node": "^20.10.3",
     "framer-motion": "^10.16.12",
     "lodash.isobject": "^3.0.2",
+    "lodash.throttle": "^4.1.1",
     "nanoid": "^5.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
