--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "lodash.throttle": "^4.1.1",
     "nanoid": "^5.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-select": "^5.8.1"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.25",
